--- a/website/templates/first_heading.html
+++ b/website/templates/first_heading.html
@@ -11,16 +11,23 @@
 </head>
 
 <body>
-
+    <!--Inicio seccion first heading-->
     <div class="container text-center">
-        <div class="row">
-            <div class="col-6 ">
+        <div class="p-5 row ">
+            <div class="col col-lg-8 text-center">
 
-
-
+                <h1 class="text-dark col" style="font-size: 20px; font-family: sans-serif;">My First Heading <code
+                        style="color:gray;"> Will Catch Your Eye </code></h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, recusandae itaque. Ex necessitatibus
+                    sunt repellendus facere odio illum? Quaerat laboriosam quae quasi quidem molestiae? Blanditiis
+                    veritatis harum fugit reprehenderit voluptate.</p>
+            </div>
+            <div class="col col-lg-4 text-center">
+                <img src="./assets/img/1.jpg" alt="" class="rounded-circle" alt="imagen 1" width="250" height="250">
             </div>
         </div>
     </div>
+    <!--Inicio seccion first heading-->
 
     <!--no tocar-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
