--- a/website/templates/navbar.html
+++ b/website/templates/navbar.html
@@ -8,9 +8,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
-      <div class="container text-center">
+   <!--Inicio seccion navbar-->
+      <div class="container text-center col-lg-12">
         <div class="row">
-        <div class="col-12 ">
+        <div class="col">
           <nav class="navbar navbar-expand-lg  navbar navbar-dark bg-dark">
             <a class="navbar-brand" href="#" style="margin-left:15px;">Start Bootstrap</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -36,7 +37,7 @@
         </div>
         </div>
         </div>
-
+ <!--Fin seccion navbar-->
 
    <!--no tocar-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
