--- a/website/templates/services.html
+++ b/website/templates/services.html
@@ -1,3 +1,38 @@
-<!-- your html code here -->
-<p>Hello, I'm the services.html</p>
-<p>Hello, I'm the services section and I was loaded using ajax from templates/services.html</p>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>OnePageWonder</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+</head>
+
+<body>
+    <!--Inicio seccion Services -->
+    <div class="container text-center">
+        <div class="p-5 row ">
+            <div class="col col-lg-4 text-center">
+                <img src="./assets/img/2.jpg" alt="" class="rounded-circle" alt="imagen 2" width="250" height="250">
+            </div>
+            <div class="col col-lg-8 text-center">
+                <h1 class="text-dark col" style="font-size: 20px; font-family: sans-serif;">The Second Heading <code
+                        style="color:gray;"> Is Pretty Cool Too. </code></h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, recusandae itaque. Ex necessitatibus
+                    sunt repellendus facere odio illum? Quaerat laboriosam quae quasi quidem molestiae? Blanditiis
+                    veritatis harum fugit reprehenderit voluptate.</p>
+            </div>
+        </div>
+    </div>
+    <!--Inicio seccion Services -->
+
+    <!--no tocar-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
+
+</body>
+
+</html>
