--- a/website/templates/portfolio.html
+++ b/website/templates/portfolio.html
@@ -1,25 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <title>Document</title>
+    <title>OnePageWonder</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
+
 <body>
-    
+    <div class="container ">
+        <div class="p-5 row ">
+
+            <div class="col col-lg-12 ">
+                <h1>Portfolio</h1>
+                <p style="font-size: 20px; font-family: sans-serif; color: rgb(101, 101, 101);">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum IC ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo. </p>
+            </div>
+            
+            <div class="col col-lg-4">
+                <img src="./assets/img/big-project-image.png" alt="imagen 1" width="380" height="250">
+<p></p>
+                <h3 style="color: rgb(67, 104, 172);">Project Name</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo veritatis aliquid accusantium eos.</p>
+            </div>
+
+            <div class="col col-lg-4 ">
+                <img src="./assets/img/big-project-image.png" alt="imagen 1" width="380" height="250">
+                <p></p>
+                <h3 style="color: rgb(67, 104, 172);">Project Name</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo veritatis aliquid accusantium eos.</p>
+            </div>
+
+            <div class="col col-lg-4 ">
+                <img src="./assets/img/big-project-image.png" alt="imagen 1" width="380" height="250">
+                <p></p>
+                <h3 style="color: rgb(67, 104, 172);">Project Name</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo veritatis aliquid accusantium eos.</p>
+            </div>
+
+        </div>
+    </div>
 
 
 
 
 
+        
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+            crossorigin="anonymous"></script>
 
-
-
-
-
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
+
 </html>
