--- a/website/templates/contact.html
+++ b/website/templates/contact.html
@@ -12,36 +12,33 @@
 
 <body>
 
-
-
-
-    <div class="container text-center">
-        <div class="row">
-            <div class="col-12 ">
-                <form>
-                    <h1>Contact</h1>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Non, at ut. Nulla et officiis laborum
-                        voluptatem
-                        ipsam fugit ab, sit incidunt non ea temporibus ratione repudiandae sequi aliquid pariatur error!</p>
-                    <div class="mb-3 ">
-                        <label for="exampleFormControlInput1" class="form-label">Your Email </label>
-                        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Your email">
+<!--inicio de Contact-->
+<div class="container text-center">
+    <div class="row">
+        <div class="col-lg-12">
+            <form>
+                <h1>Contact</h1>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Non, at ut. Nulla et officiis laborum
+                    voluptatem
+                    ipsam fugit ab, sit incidunt non ea temporibus ratione repudiandae sequi aliquid pariatur error!</p>
+                <div class="mb-3 ">
+                    <label for="exampleFormControlInput1" class="form-label">Your Email </label>
+                    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Your email">
+                </div>
+                <div class="mb-3">
+                    <label for="exampleFormControlTextarea1" class="form-label">Your message </label>
+                    <textarea class="form-control" id="exampleFormControlTextarea1"
+                        rows="3"> Please enter your message here....</textarea>
+                    <br>
+                    <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+                        <button class="btn btn-primary me-md-2" type="button">Submit</button>
                     </div>
-                    <div class="mb-3">
-                        <label for="exampleFormControlTextarea1" class="form-label">Your message </label>
-                        <textarea class="form-control" id="exampleFormControlTextarea1"
-                            rows="3"> Please enter your message here....</textarea>
-                        <br>
-                        <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-                            <button class="btn btn-primary me-md-2" type="button">Submit</button>
-            
-                        </div>
-                    </div>
-                </form>
-            </div>
-
+                </div>
+            </form>
         </div>
     </div>
+</div>
+<!--termino de Contact-->
 
     <!--no tocar-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
