--- a/website/templates/services.html
+++ b/website/templates/services.html
@@ -11,22 +11,22 @@
 </head>
 
 <body>
-    <!--Inicio seccion Services -->
-    <div class="container text-center">
-        <div class="p-5 row ">
-            <div class="col col-lg-4 text-center">
-                <img src="./assets/img/2.jpg" alt="" class="rounded-circle" alt="imagen 2" width="250" height="250">
-            </div>
-            <div class="col col-lg-8 text-center">
-                <h1 class="text-dark col" style="font-size: 20px; font-family: sans-serif;">The Second Heading <code
-                        style="color:gray;"> Is Pretty Cool Too. </code></h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, recusandae itaque. Ex necessitatibus
-                    sunt repellendus facere odio illum? Quaerat laboriosam quae quasi quidem molestiae? Blanditiis
-                    veritatis harum fugit reprehenderit voluptate.</p>
-            </div>
+<!--Inicio seccion Services -->
+<div class="container text-center">
+    <div class="p-5 row ">
+        <div class="col col-lg-4 text-center">
+            <img src="./assets/img/2.jpg" alt="" class="rounded-circle" alt="imagen 2" width="250" height="250">
+        </div>
+        <div class="col col-lg-8 text-center">
+            <h1 class="text-dark col" style="font-size: 20px; font-family: sans-serif;">The Second Heading <code
+                    style="color:gray;"> Is Pretty Cool Too. </code></h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, recusandae itaque. Ex necessitatibus
+                sunt repellendus facere odio illum? Quaerat laboriosam quae quasi quidem molestiae? Blanditiis
+                veritatis harum fugit reprehenderit voluptate.</p>
         </div>
     </div>
-    <!--Inicio seccion Services -->
+</div>
+<!--termino seccion Services -->
 
     <!--no tocar-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
